fix lua loader